fixed ui overflow issue

--- a/style.css
+++ b/style.css
@@ -515,6 +515,7 @@ footer {
 @media (max-width: 1240px) {
   body {
     padding: 0;
+    overflow-x: hidden;
   }
   .mid {
     flex-direction: column;
